fdo#62977 allow SAL_MAX_INT16..SAL_MAX_UINT16 when importing RTF_U

Change-Id: Ie36d5881b0ebe8c38526690ca27d02bfb7af7829